--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,10 @@
 * {
   font-family: "Urbanist", sans-serif;
 }
+
+.grid-bg {
+  background-size: 40px 40px;
+  background-image:
+    linear-gradient(to right, rgba(0,0,0,0.1) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(0,0,0,0.1) 1px, transparent 1px);
+}
